# telecom_test_task

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
include/config/: WorkshopConfig.hpp  WorkshopConfigParser.hpp
include/domain/: Event.hpp  Identifiers.hpp  Item.hpp  Machine.hpp
include/modeling/: EventQueue.hpp  Simulator.hpp  Simulator.ipp
include/ports/: EventSink.hpp  SortingEventSink.hpp  SortingEventSink.ipp  StreamEventSink.hpp  StreamEventSink.ipp
src/: CMakeLists.txt  main.cpp
src/config/: WorkshopConfigParser.cpp
src/domain/: Machine.cpp
src/modeling/: EventQueue.cpp
